git-svn-id: https://svn.code.sf.net/p/apertium/svn/trunk/apertium-lex-tools@45966 72bbbca6-d526-0410-a7d9-f06f51895060

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,12 +2,14 @@ AM_LDFLAGS=$(LIBS)
 #AM_CXXFLAGS=-Wall -g -ggdb -DDEBUG 
 AM_CXXFLAGS=-Wall -g -ggdb -DDEBUG 
 
-bin_PROGRAMS = lrx-comp lrx-proc multitrans #apertium-ldx-proc
+bin_PROGRAMS = lrx-comp lrx-proc multitrans irstlm-ranker #apertium-ldx-proc
 
 lrx_comp_SOURCES = lrx_compiler.cc lrx_comp.cc
 
 lrx_proc_SOURCES = lrx_processor.cc lrx_proc.cc
 
 multitrans_SOURCES = TaggerOutputProcessor.cpp Multitrans.cpp multitrans.cpp
+
+irstlm_ranker_SOURCES = irstlm_ranker.cpp
 
 #apertium_ldx_proc_SOURCES = ldx_proc.cc
