--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,8 @@ AM_LDFLAGS=$(LIBS)
 #AM_CXXFLAGS=-Wall -g -ggdb -DDEBUG 
 AM_CXXFLAGS=-Wall -g -ggdb -DDEBUG 
 
-bin_PROGRAMS = lrx-comp lrx-proc multitrans irstlm-ranker #apertium-ldx-proc
+# bin_PROGRAMS = lrx-comp lrx-proc multitrans irstlm-ranker #apertium-ldx-proc
+bin_PROGRAMS = lrx-comp lrx-proc multitrans # irstlm-ranker apertium-ldx-proc
 
 lrx_comp_SOURCES = lrx_compiler.cc lrx_comp.cc
 
@@ -10,6 +11,6 @@ lrx_proc_SOURCES = lrx_processor.cc lrx_proc.cc
 
 multitrans_SOURCES = TaggerOutputProcessor.cpp Multitrans.cpp multitrans.cpp
 
-irstlm_ranker_SOURCES = irstlm_ranker.cpp
+# irstlm_ranker_SOURCES = irstlm_ranker.cpp
 
 #apertium_ldx_proc_SOURCES = ldx_proc.cc
