first scratch at making it compile irstlm_ranker
git-svn-id: https://svn.code.sf.net/p/apertium/svn/trunk/apertium-lex-tools@47820 72bbbca6-d526-0410-a7d9-f06f51895060

--- a/Makefile.am
+++ b/Makefile.am
@@ -13,6 +13,10 @@ multitrans_SOURCES = tagger_output_processor.cc multi_translator.cc multitrans.c
 
 yasmet_SOURCES = yasmet.cc
 
-# irstlm_ranker_SOURCES = irstlm_ranker.cpp
+if HAVE_IRSTLM
+    irstlm_ranker_SOURCES = irstlm_ranker.cpp
+else
+    bin_PROGRAMS += irstlm_ranker
+endif
 
-#apertium_ldx_proc_SOURCES = ldx_proc.cc
+
