SWIG Python wrapper guarded by --enable-python-bindings

--- a/Makefile.am
+++ b/Makefile.am
@@ -21,4 +21,8 @@ if HAVE_IRSTLM
     bin_PROGRAMS += irstlm_ranker
 endif
 
+if HAVE_PYTHON_BINDINGS
+SUBDIRS = python
+endif
+
 EXTRA_DIST = lrx_compiler.h lrx_processor.h multi_translator.h tagger_output_processor.h
