--- a/python/setup.py.in
+++ b/python/setup.py.in
@@ -1,8 +1,8 @@
 #!/usr/bin/env python3
 
-"""
+'''
 Setup for SWIG Python bindings for lex-tools
-"""
+'''
 from os import path
 from distutils.core import Extension, setup
 from distutils.command.build import build
@@ -25,18 +25,16 @@ def get_sources():
     return sources
 
 def get_include_dirs():
-    # get rid of '-I' in LTTOOLBOX_CFLAGS and split list from 1, to remove extra element ''
-    # Strip extra space at end
-    dirs = '@LTTOOLBOX_CFLAGS@'.split('-I')[1:]
-    dirs += '@LIBXML_LIBS@'.split('-I')[1:]
-    dirs = [x.strip() for x in dirs]
+    # Remove '-I' from Flags, as python add '-I' on its own
+    dirs = '@LTTOOLBOX_CFLAGS@'.replace('-I', '').split()
+    dirs += '@LIBXML_LIBS@'.replace('-I', '').split()
     return dirs + ['..']
 
 
 lextools_module = Extension(
     name='_lextools',
     sources=get_sources(),
-    swig_opts = ["-c++", "-I..", "-Wall"],
+    swig_opts=['-c++', '-I..', '-Wall']+'@LTTOOLBOX_CFLAGS@'.split(),
     include_dirs=get_include_dirs(),
     library_dirs=['/usr/include/libxml2', '/usr/local/lib'],
     extra_compile_args='@CXXFLAGS@'.split(),
@@ -47,7 +45,7 @@ setup(
     name='@PACKAGE@',
     version='@PACKAGE_VERSION@',
     description='SWIG interface to @PACKAGE_NAME@',
-    long_description="SWIG interface to @PACKAGE_NAME@ for use in apertium-python",
+    long_description='SWIG interface to @PACKAGE_NAME@ for use in apertium-python',
     # TODO: author, maintainer, url
     author_email='@PACKAGE_BUGREPORT@',
     license='GPL-3.0+',
