run tests on make check (or make test)

--- a/Makefile.am
+++ b/Makefile.am
@@ -26,3 +26,10 @@ SUBDIRS = python
 endif
 
 EXTRA_DIST = lrx_compiler.h lrx_processor.h multi_translator.h tagger_output_processor.h
+
+.PHONY: check
+check:
+	testing/run
+
+.PHONY: test
+test: check
