--- a/python/Makefile.am
+++ b/python/Makefile.am
@@ -6,4 +6,4 @@ BUILT_SOURCES = %_wrap.cpp
 	$(PYTHON) setup.py build
 
 install-exec-local:
-	$(PYTHON) setup.py install --prefix=$(DESTDIR)$(prefix)
+	$(PYTHON) setup.py install $(PYTHON_INSTALL_PARAMS)
