--- a/python/setup.py.in
+++ b/python/setup.py.in
@@ -20,7 +20,7 @@ class CustomBuild(build):
 def get_sources():
     sources = ['lex_tools.i']
     cc_sources = ['lrx_processor.cc']
-    rel_path = '..'
+    rel_path = '../src'
     sources.extend(path.join(rel_path, f) for f in cc_sources)
     return sources
 
@@ -28,13 +28,13 @@ def get_include_dirs():
     # Remove '-I' from Flags, as python add '-I' on its own
     dirs = '@LTTOOLBOX_CFLAGS@'.replace('-I', '').split()
     dirs += '@LIBXML_LIBS@'.replace('-I', '').split()
-    return dirs + ['..']
+    return dirs + ['../src']
 
 
 lextools_module = Extension(
     name='_lextools',
     sources=get_sources(),
-    swig_opts=['-c++', '-I..', '-Wall']+'@LTTOOLBOX_CFLAGS@'.split(),
+    swig_opts=['-c++', '-I../src', '-Wall']+'@LTTOOLBOX_CFLAGS@'.split(),
     include_dirs=get_include_dirs(),
     library_dirs=['/usr/include/libxml2', '/usr/local/lib'],
     extra_compile_args='@CXXFLAGS@'.split(),
