Convert to ICU; Install needed scripts; Snip README_mac

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 AM_LDFLAGS=$(LIBS)
 
-SUBDIRS = src
+SUBDIRS = src scripts
 
 pkgconfigdir = $(libdir)/pkgconfig
 dist_pkgconfig_DATA = apertium-lex-tools.pc
