--- a/.gitignore
+++ b/.gitignore
@@ -57,8 +57,8 @@ Makefile.in
 
 src/lrx-comp
 src/lrx-proc
-
-multitrans
+scripts/process-tagger-output
+src/multitrans
 stamp-h1
 
 /python/apertium_lex_tools.py
