--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,13 +10,13 @@ jobs:
     - name: dependencies
       run: |
            sudo apt-get -qy update
-           sudo apt-get -qfy install wget ca-certificates
+           sudo apt-get -qfy install apt-utils wget ca-certificates
            wget -q https://apertium.projectjj.com/apt/install-nightly.sh -O - | sudo bash
-           sudo apt-get -qfy install --no-install-recommends build-essential automake autotools-dev pkg-config libxml2-dev lttoolbox-dev python3-dev python3-setuptools swig
+           sudo apt-get -qfy install --no-install-recommends build-essential automake autotools-dev pkg-config libxml2-dev libirstlm-dev lttoolbox-dev python3-dev python3-setuptools swig
     - name: autoreconf
       run: autoreconf -fvi
     - name: configure
-      run: ./configure --with-yasmet --enable-python-bindings
+      run: ./configure --enable-yasmet --enable-irstlm --enable-python-bindings
     - name: build
       run: make -j4 V=1 VERBOSE=1
     - name: tests
