--- a/python/setup.py.in
+++ b/python/setup.py.in
@@ -3,42 +3,25 @@
 '''
 Setup for SWIG Python bindings for lex-tools
 '''
-from os import path
 from distutils.core import Extension, setup
-from distutils.command.build import build
+from sys import platform
 
-
-class CustomBuild(build):
-    sub_commands = [
-        ('build_ext', build.has_ext_modules),
-        ('build_py', build.has_pure_modules),
-        ('build_clib', build.has_c_libraries),
-        ('build_scripts', build.has_scripts),
-    ]
-
-
-def get_sources():
-    sources = ['apertium_lex_tools.i']
-    cc_sources = ['lrx_processor.cc']
-    rel_path = '../src'
-    sources.extend(path.join(rel_path, f) for f in cc_sources)
-    return sources
-
-def get_include_dirs():
-    # Remove '-I' from Flags, as python add '-I' on its own
-    dirs = '@LTTOOLBOX_CFLAGS@'.replace('-I', '').split()
-    dirs += '@LIBXML_CFLAGS@'.replace('-I', '').split()
-    return dirs + ['../src']
-
+compile_args = '@CXXFLAGS@'.split() + '@LTTOOLBOX_CFLAGS@'.split() + '@ICU_CFLAGS@'.split()
+link_args = []
+if platform == 'darwin':
+	compile_args += ['-stdlib=libc++', '-mmacosx-version-min=10.7']
+	link_args.append('-mmacosx-version-min=10.7')
 
 apertium_lex_tools_module = Extension(
     name='_apertium_lex_tools',
-    sources=get_sources(),
-    swig_opts=['-c++', '-I../src', '-Wall']+'@LTTOOLBOX_CFLAGS@'.split()+'@LIBXML_CFLAGS@'.split()+'@ICU_CFLAGS@'.split(),
-    include_dirs=get_include_dirs(),
-    library_dirs=['/usr/include/libxml2', '/usr/local/lib'],
-    extra_compile_args='@CXXFLAGS@'.split(),
-    extra_link_args=['-lxml2', '-llttoolbox3'],
+	language='c++',
+    sources=['apertium_lex_tools.i'],
+	swig_opts=['-c++', '-I..', '-I@top_srcdir@/src', '-Wall'],
+    include_dirs=['@top_srcdir@', '@top_srcdir@/src'],
+    library_dirs=['@top_srcdir@/src/.libs'],
+	libraries=[],
+    extra_compile_args=compile_args,
+    extra_link_args=link_args,
 )
 
 setup(
@@ -50,7 +33,7 @@ setup(
     author_email='@PACKAGE_BUGREPORT@',
     license='GPL-3.0+',
     maintainer_email='@PACKAGE_BUGREPORT@',
-    cmdclass={'build': CustomBuild},
     ext_modules=[apertium_lex_tools_module],
     py_modules=['apertium_lex_tools'],
+	data_files=[]
 )
