--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,10 @@ AC_PREREQ(2.61)
 
 m4_define([PKG_VERSION_MAJOR], [0])
 m4_define([PKG_VERSION_MINOR], [4])
-m4_define([PKG_VERSION_PATCH], [0])
+m4_define([PKG_VERSION_PATCH], [1])
+
+# Bump if the ABI (not API) changed in a backwards-incompatible manner
+m4_define([PKG_VERSION_ABI], [1])
 
 m4_define([required_libxml_version], [2.6.17])
 m4_define([required_lttoolbox_version], [3.6.5])
@@ -12,15 +15,11 @@ AM_INIT_AUTOMAKE
 AC_CONFIG_MACRO_DIR([m4])
 
 VERSION=$PACKAGE_VERSION
-VERSION_MAJOR=PKG_VERSION_MAJOR
-VERSION_API=PKG_VERSION_MAJOR.PKG_VERSION_MINOR
-SOVERSION=0:1:0
+VERSION_ABI=PKG_VERSION_ABI
 
 AC_SUBST(PACKAGE_NAME)
 AC_SUBST(PACKAGE_VERSION)
-AC_SUBST(VERSION_MAJOR)
-AC_SUBST(VERSION_API)
-AC_SUBST(SOVERSION)
+AC_SUBST(VERSION_ABI)
 
 AC_PROG_CXX
 AM_SANITY_CHECK
