--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,11 +3,11 @@ h_sources = irstlm_ranker.h lrx_compiler.h lrx_processor.h multi_translator.h \
 cc_sources = lrx_compiler.cc lrx_processor.cc multi_translator.cc \
 			 tagger_output_processor.cc
 
-library_includedir = $(includedir)/$(PACKAGE_NAME)-$(VERSION_API)/$(PACKAGE_NAME)
+library_includedir = $(includedir)/$(PACKAGE_NAME)
 library_include_HEADERS = $(h_sources)
-lib_LTLIBRARIES = libapertium-lex-tools0.la
-libapertium_lex_tools0_la_SOURCES = $(h_sources) $(cc_sources)
-libapertium_lex_tools0_la_LDFLAGS = -version-info $(SOVERSION) -release $(VERSION_API)
+lib_LTLIBRARIES = libapertium-lex-tools.la
+libapertium_lex_tools_la_SOURCES = $(h_sources) $(cc_sources)
+libapertium_lex_tools_la_LDFLAGS = -version-info $(VERSION_ABI)
 
 bin_PROGRAMS = lrx-comp lrx-proc multitrans process-tagger-output
 
@@ -19,7 +19,7 @@ multitrans_SOURCES = multitrans.cc
 
 process_tagger_output_SOURCES = process_tagger_output.cc
 
-LDADD = -lapertium-lex-tools$(VERSION_MAJOR) $(lib_LTLIBRARIES)
+LDADD = -lapertium-lex-tools $(lib_LTLIBRARIES)
 
 if HAVE_YASMET
     yasmet_SOURCES = yasmet.cc
