Add /usr/include explicitly - no clue why I need to do this

--- a/python/setup.py.in
+++ b/python/setup.py.in
@@ -21,7 +21,7 @@ apertium_lex_tools_module = Extension(
     name='_apertium_lex_tools',
     language='c++',
     sources=['apertium_lex_tools.i'],
-    swig_opts=['-c++', '-I..', '-I@top_srcdir@/src', '-Wall'] + '@LTTOOLBOX_CFLAGS@'.split() + '@LIBXML_CFLAGS@'.split(),
+    swig_opts=['-c++', '-I..', '-I@top_srcdir@/src', '-I/usr/include', '-Wall'] + '@LTTOOLBOX_CFLAGS@'.split() + '@LIBXML_CFLAGS@'.split(),
     include_dirs=dirs,
     library_dirs=['@top_srcdir@/src/.libs'],
     libraries = ['apertium-lex-tools'],
