Fix i18n data macro

--- a/Makefile.am
+++ b/Makefile.am
@@ -18,4 +18,4 @@ test: check
 
 export LTTB_I18N_DATA=$(datadir)/lttoolbox/lttoolbox.dat
 export LOCALES_DIR=$(datadir)/$(PACKAGE_NAME)
-export APER_I18N_DATA=$(LOCALES_DIR)/apertium.dat
+export APLT_I18N_DATA=$(LOCALES_DIR)/aplt.dat
