--- a/Makefile.am
+++ b/Makefile.am
@@ -16,6 +16,6 @@ check:
 .PHONY: test
 test: check
 
-export LTTB_I18N_DATA=$(datadir)/lttoolbox/lttoolbox.dat
+export ALT_I18N_DATA=$(datadir)/lttoolbox/lttoolbox.dat
 export LOCALES_DIR=$(datadir)/$(PACKAGE_NAME)
-export APLT_I18N_DATA=$(LOCALES_DIR)/aplt.dat
+export ALX_I18N_DATA=$(LOCALES_DIR)/alx.dat
